# vendor-risk-portal

./: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  Dockerfile  LICENSE  README.md  biome.json  docker-entrypoint.sh  lefthook.yml  litestream.yml  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.ux.config.ts  ux-pw-config-88164cca.ts  ux_capture.js
.github/: dependabot.yml
adws/: README.md  adw_build.py  adw_build_iso.py  adw_document.py  adw_document_iso.py  adw_patch.py  adw_patch_iso.py  adw_plan.py  adw_plan_build.py  adw_plan_build_iso.py  adw_plan_build_test.py  adw_plan_build_test_iso.py  adw_plan_build_test_review.py  adw_plan_build_test_review_iso.py  adw_plan_iso.py  adw_review.py  adw_review_iso.py  adw_sdlc.py  adw_sdlc_iso.py  adw_sdlc_zte.py  adw_sdlc_zte_iso.py  adw_settings.json  adw_ship.py  adw_ship_iso.py  adw_ship_zte.py  adw_test.py  adw_test_iso.py  adw_ux_validation.py  pyproject.toml
adws/adw_modules/: __init__.py  agent.py  copilot_ops.py  data_types.py  git_ops.py  github.py  merge_ops.py  orchestrate.py  phase.py  ship_ops.py  state.py  test_ops.py  utils.py  ux_detection.py  ux_ops.py  workflow_ops.py  worktree_ops.py
adws/adw_tests/: test_merge_ops.py  test_model_selection.py  test_ship_only.py  test_ship_ops.py  test_ux_detection.py  test_ux_validation.py
adws/adw_triggers/: run_zte.py  trigger_cron.py
app_docs/: feature-1952b0f3-grid-tooltip-resizable-columns.md  feature-1c410c6f-embed-ux-evidence-screenshots.md  feature-27acf3a7-data-subject-requests-category.md  (+15 more)
(+239 files in other folders)
